[package]
name = "date_iter"
version = "0.1.0"
authors = ["jadkins"]
description = "Simple date iterator"
homepage = "https://github.com/joshadkins09/date_iter"
# documentation = "https://docs.rs/date_iter/"
repository = "https://github.com/joshadkins09/date_iter"
keywords = ["date", "iterator"]
categories = ["date-and-time"]
readme = "README.md"
license = "MIT"

[dependencies]
chrono = "0.4"
